9.292:tasks.projects.uploadLogo method similar to the Cash app
